add funds api added
